# ting

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  image.yml
docs/: cli.md  data-model.md  deployment.md  development.md  index.md
k8s/base/: certificate.yaml  configmap.yaml  deployment.yaml  httproute.yaml  kustomization.yaml  namespace.yaml  postgres-claim.yaml  secret.yaml.example  service.yaml  valkey-claim.yaml
k8s/overlays/cmdbee/: kustomization.yaml  referencegrant.yaml
k8s/overlays/frontstate/: certificate-patch.yaml  httproute-patch.yaml  kustomization.yaml
k8s/overlays/localk8s/: kustomization.yaml
migrations/: env.py
migrations/versions/: 6d7670f9f395_baseline_v2_schools_surveys.py  7dd7faa53a6d_fk_indexes_and_question_type_check.py  ef0df72a346d_baseline.py
scripts/: bootstrap-cmdbee.sh  deploy-cmdbee.sh  ting
seeds/: example.yaml  schema.md
src/ting/: aggregation.py  app.py  auth.py  cli.py  codes.py  config.py  db.py  question_types.py  ratelimit.py  valkey.py
src/ting/models/: __init__.py  base.py  bulletin.py  code.py  cohort.py  comment.py  endorsement.py  metrics_event.py  pledge.py  proposal.py  question.py  response.py  school.py  summary_snapshot.py  survey.py
src/ting/routes/: public.py  (+3 more)
tests/: conftest.py
tests/integration/: conftest.py  test_auth.py  test_bulletin_cli.py  test_code_service.py  test_comments.py  test_db.py  test_models.py  test_pledges.py  test_public_routes.py  test_ratelimit.py  test_sandbox.py  test_seed_loader.py  test_summary_routes.py  test_summary_service.py  test_survey_routes.py  test_valkey.py
tests/unit/: test_aggregation.py  test_app.py  test_code_export.py  test_codes.py  test_config.py  test_question_types.py
(+26 files in other folders)
